lesson4/excercise/microservice-ex1/default-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-backend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default

  template:
    metadata:
      labels:
        app: default
    
    spec:
      containers:
      - name: default
        image: hashicorp/http-echo
        args:
        - "-text=404 - Page Not Found"
        ports:
        - containerPort: 5678


---
apiVersion: v1
kind: Service
metadata:
  name: default-backend-service

spec:
  selector:
    app: default
  ports:
  - port: 80
    targetPort: 5678
