lesson4/excercise/microservice-ex1/frontend-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-service
  
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
      - name: frontend-service
        image: nginx:1.25
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service

spec:
  type: NodePort
  selector:
    app: frontend-service
  ports:
  - port: 80
    targetPort: 80
